--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
         ],
         "linebreak-style": [
             "error",
-            "unix"
+            "windows"
         ],
         "quotes": [
             "error",
@@ -34,6 +34,7 @@
             "error",
             "always"
         ],
-        "@typescript-eslint/no-empty-interface" : "off"
+        "@typescript-eslint/no-empty-interface" : "off",
+        "@typescript-eslint/ban-types" : "off"
     }
 }
