--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "ts-node-dev src/Index.ts"
   },
   "dependencies": {
+    "@types/yup": "^0.32.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0"
