--- a/package.json
+++ b/package.json
@@ -6,20 +6,26 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node-dev src/Index.ts",
-    "dev": "ts-node-dev src/Index.ts"
+    "dev": "ts-node-dev src/Index.ts",
+    "test": "jest"
   },
   "dependencies": {
+    "@types/jest": "^29.5.1",
     "@types/yup": "^0.32.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "http-status-codes": "^2.2.0"
+    "http-status-codes": "^2.2.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/http-status-codes": "^1.2.0",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
+    "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   }
