--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "knex:seed": "knex --knexfile ./src/server/database/knex/Environment.ts seed:run",
     "postinstall": "tsc",
     "production": "node ./build/Index.js",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage",
+    "make-badges": "coverage-badges"
   },
   "dependencies": {
     "@types/jest": "^29.5.1",
     "@types/yup": "^0.32.0",
+    "coverage-badges-cli": "^1.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
