--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "knex:seed": "knex --knexfile ./src/server/database/knex/Environment.ts seed:run",
     "postinstall": "tsc",
     "production": "node ./build/Index.js",
-    "test": "jest",
-    "coverage": "jest --coverage",
-    "make-badges": "coverage-badges"
+    "test": "jest"
   },
   "dependencies": {
     "@types/jest": "^29.5.1",
