--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ PORT=
 NODE_ENV=
 IS_LOCAL_HOST=false
 JWT_SECRET=
+DATABASE_HOST=
+DATABASE_USER=
+DATABASE_NAME=
+DATABASE_PASSWORD=
+DATABASE_PORT=
