--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
     "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
-    "sqlite3": "^5.1.6",
+    "pg": "^8.11.0",
     "ts-jest": "^29.1.0"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.2",
+    "sqlite3": "^5.1.6",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/http-status-codes": "^1.2.0",
     "@types/jest": "^29.5.1",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/pg": "^8.6.6",
     "@types/supertest": "^2.0.12",
     "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
