--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 PORT=5051
-NODE_ENV=dev
+NODE_ENV=production
 IS_LOCAL_HOST=true
 JWT_SECRET=minhasecret
+DATABASE_HOST=localhost
+DATABASE_USER=postgres
+DATABASE_NAME=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_PORT=5432
