--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5051
-NODE_ENV=production
+NODE_ENV=dev
 IS_LOCAL_HOST=true
 JWT_SECRET=minhasecret
 DATABASE_HOST=localhost
@@ -7,3 +7,4 @@ DATABASE_USER=postgres
 DATABASE_NAME=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_PORT=5432
+ENABLED_CORS=https://www.google.com;*
