--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "coverage-badges-cli": "^1.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -29,8 +30,8 @@
     "ts-jest": "^29.1.0"
   },
   "devDependencies": {
-    "sqlite3": "^5.1.6",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/http-status-codes": "^1.2.0",
     "@types/jest": "^29.5.1",
@@ -41,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
+    "sqlite3": "^5.1.6",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
