--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "pg": "^8.11.0",
-    "ts-jest": "^29.1.0"
+    "swagger-express-router": "^1.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
+    "ts-jest": "^29.1.0",
+    "yaml": "^2.2.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -38,6 +42,8 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/pg": "^8.6.6",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
