config and update project to use elephant sql

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5051
-NODE_ENV=dev
+NODE_ENV=production
 IS_LOCAL_HOST=true
 JWT_SECRET=minhasecret
 DATABASE_HOST=localhost
@@ -7,4 +7,5 @@ DATABASE_USER=postgres
 DATABASE_NAME=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_PORT=5432
+DATABASE_URL=postgres://stfydmvi:4EMXd0T022pB39jw_EkrGoZAxh1AVg4i@silly.db.elephantsql.com/stfydmvi
 ENABLED_CORS=https://www.google.com;*
