--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "jean canova",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev src/Index.ts",
-    "dev": "ts-node-dev src/Index.ts",
+    "start": "tsc node build/Index.js",
+    "dev": "ts-node-dev src/Index.ts --watch",
     "build": "tsc",
     "knex:rollback-all": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback --all",
     "knex:rollback": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback",
@@ -19,21 +19,21 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "coverage-badges-cli": "^1.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^9.0.1",
     "jest": "^29.6.2",
+    "jsonwebtoken": "^9.0.1",
     "knex": "^2.5.1",
     "pg": "^8.11.1",
     "swagger-express-router": "^1.0.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.3",
+    "swagger-ui-express": "^5.0.0",
     "ts-jest": "^29.1.1",
     "yaml": "^2.3.1"
   },
   "devDependencies": {
+    "yup": "^1.2.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -51,9 +51,6 @@
     "sqlite3": "^5.1.6",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.5"
-  },
-  "engines": {
-    "node": "18.x"
+    "typescript": "^5.1.6"
   }
 }
